tests/syntax_error/match_no_case_keyword.jou
enum Foo:
    One
    Two
    Three

def blah(f: Foo) -> None:
    match f:
        Foo.One:  # Error: expected the 'case' keyword, got a variable name 'Foo'
            printf("hi\n")
